# cortx-multisite

./: .gitignore  .prospector.yaml  .whitesource  README.md  testFile
s3/replication/common/: .gitignore  Makefile  README.md  devel-requirements.txt  log.py  requirements.txt  setup.cfg  setup.py  tagset.xml
s3/replication/common/experiments/: README.md  kafka_consumer.py  object_replication_request.py  s3_complete_multipart_upload.py  s3_create_multipart_upload.py  s3_get_bucket_replication.py  s3_get_object.py  s3_get_object_tagging.py  s3_head_object.py  s3_put_object.py  s3_put_object_tagging.py  s3_range_read.py  s3_upload_part.py  tag_replication_request.py
s3/replication/common/src/: .gitignore
s3/replication/common/src/s3replicationcommon/: __init__.py  aws_v4_signer.py  job.py  jobs.py  log.py  s3_common.py  s3_complete_multipart_upload.py  s3_create_multipart_upload.py  s3_get_bucket_replication.py  s3_get_object.py  s3_get_object_tagging.py  s3_head_object.py  s3_put_object.py  s3_put_object_tagging.py  s3_range_read.py  s3_session.py  s3_site.py  s3_update_replication_status.py  s3_upload_part.py  templates.py  timer.py
s3/replication/common/src/s3replicationcommon/formats/: replication_job.json
s3/replication/common/src/systemd/: s3_in_memory.service
s3/replication/common/src/templates/: fdmi_record_tag_template.json  fdmi_record_template.json  replication_job_template.json  replication_job_template_for_manager.json  subscribe_payload_template.json
s3/replication/common/tests/system/: boto3_load_test_put.py  config.py  load_test_async_put.py  object_generator.py  object_generator_multipart_upload.py  s3_async_get_bucket_replication.py  s3_async_get_object.py  s3_async_head_object.py  s3_async_put_object.py  s3_async_transfer_object.py  s3_in_memory.py  s3_transfer_obj.py  test_complete_multipart_upload.py  test_create_multipart_upload.py  test_get_bucket_replication.py  test_get_object.py  test_get_object_tagging.py  test_head_object.py  test_multipart_upload.py  test_put_bucket_replication.py  test_put_object.py  test_put_object_tagging.py  test_range_read.py  test_upload_part.py
s3/replication/common/tests/system/config/: config.yaml  credentials.yaml.sample  logger_config.yaml  object_tagset.xml  replication_policy.json  replication_policy_sample.json
s3/replication/manager/: Makefile  README.md  s3replicationmanager.toml  setup.cfg  setup.py
s3/replication/manager/scripts/: s3-replication-manager
s3/replication/manager/src/: .gitignore  manager_conf.yaml  manager_conf_init.py  scheduler.py
s3/replication/manager/src/config/: aws_s3.yaml  config.yaml  cortx_s3.yaml  logger_config.yaml  replication_job_template.json  s3_config.yaml  source_target_s3_config.yaml
s3/replication/manager/src/s3replicationmanager/: __init__.py  __main__.py  app.py  config.py  distributor.py  job_routes.py  manager_routes.py  prepare_job.py  replicator_client.py  subscriber_routes.py  subscribers.py
s3/replication/manager/src/systemd/: s3replicationmanager.service
s3/replication/manager/test/: manager_client.py  scheduler_client.py
s3/replication/manager/tests/system/: conftest.py  load_transfer.py  load_transfer_test.py  manager_client.py  s3_config.py  tag_transfer_test.py  test_jobs_resource.py  test_replication_manager.py  test_subscribers_resource.py
(+80 files in other folders)
