#
# Copyright (c) 2021 Seagate Technology LLC and/or its Affiliates
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# For any questions about this software or licensing,
# please email opensource@seagate.com or cortx-questions@seagate.com.
#

[metadata]
name = s3-replication-manager
version = 0.0.1
author = Seagate
author_email = opensource@seagate.com
description = Replication manager for CORTX cross cluster/region replication for S3 objects.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Seagate/cortx-multisite
project_urls =
    Bug Tracker = https://github.com/Seagate/cortx-multisite/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache License 2.0
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
scripts =
    scripts/s3-replication-manager

[options.packages.find]
where = src

[options.data_files]
config =
    src/config/config.yaml
    src/config/logger_config.yaml
